--- a/src/ChrisScientistPlatformBundle/Resources/config/routing.yml
+++ b/src/ChrisScientistPlatformBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 chris_scientist_platform_homepage:
-    path:     /
-    defaults: { _controller: ChrisScientistPlatformBundle:Default:index }
+    path:     /hello-world
+    defaults: { _controller: ChrisScientistPlatformBundle:Advert:index }
