--- a/src/ChrisScientistPlatformBundle/Resources/config/routing.yml
+++ b/src/ChrisScientistPlatformBundle/Resources/config/routing.yml
@@ -1,3 +1,18 @@
 chris_scientist_platform_homepage:
     path:     /hello-world
     defaults: { _controller: ChrisScientistPlatformBundle:Advert:index }
+
+chris_scientist_platform_home:
+    path:     /platform
+    defaults: { _controller: ChrisScientistPlatformBundle:Advert:index }
+    requirements:
+        id: \d+
+
+chris_scientist_platform_view:
+    path:     /platform/advert/view/{id}
+    defaults: { _controller: ChrisScientistPlatformBundle:Advert:view }
+
+chris_scientist_platform_add:
+    path:     /platform/add
+    defaults: { _controller: ChrisScientistPlatformBundle:Advert:add }
+
