Définition des routes de notres platformes, AVEC préfixe dans app/config/routing.yml Pour chaque route, une action par défaut est ajoutée dans le contrôleur (le cas échéant) Routes (A=Ajouter, S=Supprimer) : S	/hello-world A	/platform/{page} A	/platform/advert/{id} A	/platform/add A	/platform/edit/{id} A	/platform/delete/{id}

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,5 @@
+# Inclure les routes du bundle ChrisScientistPlatformBundle
+# et les préfixées par /platform
 chris_scientist_platform:
     resource: "@ChrisScientistPlatformBundle/Resources/config/routing.yml"
-    prefix:   /
+    prefix:   /platform
