--- a/src/ChrisScientistPlatformBundle/Resources/config/services.yml
+++ b/src/ChrisScientistPlatformBundle/Resources/config/services.yml
@@ -2,6 +2,11 @@ services:
     chris_scientist_platform.antispam:
         class: ChrisScientistPlatformBundle\Antispam\CSAntispam
         arguments: [@mailer, %locale%, 10]
+    chris_scientist_platform.doctrine.notification:
+        class: ChrisScientistPlatformBundle\DoctrineListener\ApplicationNotification
+        arguments: [@mailer, %fromEmail%]
+        tags:
+            - { name: doctrine.event_listener, event: postPersist }
 #    chris_scientist_platform.example:
 #        class: ChrisScientistPlatformBundle\Example
 #        arguments: ["@service_id", "plain_value", %parameter%]
