--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -68,3 +68,9 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+# Stof\DoctrineExtensionsBundle Configuration
+stof_doctrine_extensions:
+    orm:
+        default:
+            sluggable: true
