--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,10 +2,22 @@
 # http://symfony.com/doc/current/book/security.html
 security:
 
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
+
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_AUTEUR, ROLE_MODERATEUR]
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
         in_memory:
-            memory: ~
+            memory: 
+                users:
+                    user: { password: userpass, roles: [ 'ROLE_USER' ] }
+                    author: { password: authorpass, roles: [ 'ROLE_AUTEUR' ] }
+                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+                    superadmin: { password: superadminpass, roles: [ 'ROLE_SUPER_ADMIN' ] }
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -14,7 +26,15 @@ security:
             security: false
 
         main:
-            anonymous: ~
+            pattern: ^/
+            anonymous: true
+            provider: in_memory
+            form_login:
+                login_path: login
+                check_path: login_check
+            logout:
+                path: logout
+                target: /platform
             # activate different ways to authenticate
 
             # http_basic: ~
