--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -42,3 +42,5 @@ security:
 
             # form_login: ~
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+    access_control:
+        - { path: ^/platform/edit, roles: ROLE_AUTEUR }
