--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,6 +4,7 @@ security:
 
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
+        ChrisScientistUserBundle\Entity\Utilisateur: plaintext
 
     role_hierarchy:
         ROLE_ADMIN: [ROLE_AUTEUR, ROLE_MODERATEUR]
@@ -18,6 +19,10 @@ security:
                     author: { password: authorpass, roles: [ 'ROLE_AUTEUR' ] }
                     admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
                     superadmin: { password: superadminpass, roles: [ 'ROLE_SUPER_ADMIN' ] }
+        main: # nom arbitraire du provider
+            entity: # type du provider
+                class: ChrisScientistUserBundle\Entity\Utilisateur
+                property: username
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -28,7 +33,7 @@ security:
         main:
             pattern: ^/
             anonymous: true
-            provider: in_memory
+            provider: main
             form_login:
                 login_path: login
                 check_path: login_check
