--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -8,11 +8,11 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: en
+    locale: fr
 
 framework:
     #esi:             ~
-    #translator:      { fallbacks: ["%locale%"] }
+    translator:      { fallbacks: ["%locale%"] }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -75,3 +75,9 @@ stof_doctrine_extensions:
     orm:
         default:
             sluggable: true
+
+# FOSUSerBundle Configuration
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: ChrisScientistUserBundle\Entity\Utilisateur
