--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,12 +6,21 @@ chris_scientist_platform:
     resource: "@ChrisScientistPlatformBundle/Resources/config/routing.yml"
     prefix:   /platform
 
-login:
-    pattern: /login
-    defaults: { _controller: ChrisScientistUserBundle:Security:login }
+fos_user_security:
+    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
 
-login_check:
-    pattern: /login_check
+fos_user_profile:
+    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
+    prefix: /profile
 
-logout:
-    pattern: /logout
+fos_user_register:
+    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+    prefix: /register
+
+fos_user_resetting:
+    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+    prefix: /resetting
+
+fos_user_change_password:
+    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+    prefix: /profile
