Dépendance opérationnelle (call) : modification du service CSAntispam

--- a/src/ChrisScientistPlatformBundle/Resources/config/services.yml
+++ b/src/ChrisScientistPlatformBundle/Resources/config/services.yml
@@ -1,9 +1,11 @@
 services:
     chris_scientist_platform.antispam:
         class: ChrisScientistPlatformBundle\Antispam\CSAntispam
-        arguments: [@mailer, %locale%, 10]
+        arguments: [@mailer, 10]
         tags:
             - { name: twig.extension }
+        calls:
+            - [ setLocale, [ %locale% ] ]
     chris_scientist_platform.doctrine.notification:
         class: ChrisScientistPlatformBundle\DoctrineListener\ApplicationNotification
         arguments: [@mailer, %from_email%]
