--- a/src/ChrisScientistPlatformBundle/Resources/config/services.yml
+++ b/src/ChrisScientistPlatformBundle/Resources/config/services.yml
@@ -11,6 +11,8 @@ services:
         arguments: [@mailer, %from_email%]
         tags:
             - { name: doctrine.event_listener, event: postPersist }
+    chris_scientist_platform.beta.html:
+        class: ChrisScientistPlatformBundle\Beta\BetaHTML
 #    chris_scientist_platform.example:
 #        class: ChrisScientistPlatformBundle\Example
 #        arguments: ["@service_id", "plain_value", %parameter%]
