Gestion d'évènement : bug constaté (texte non ajouté)

--- a/src/ChrisScientistPlatformBundle/Resources/config/services.yml
+++ b/src/ChrisScientistPlatformBundle/Resources/config/services.yml
@@ -13,6 +13,11 @@ services:
             - { name: doctrine.event_listener, event: postPersist }
     chris_scientist_platform.beta.html:
         class: ChrisScientistPlatformBundle\Beta\BetaHTML
+    chris_scientist_platform.beta.listener:
+        class: ChrisScientistPlatformBundle\Beta\BetaListener
+        arguments: [@chris_scientist_platform.beta.html, "2016-03-20"]
+        tags:
+            - { name: kernel.event_listener, event: kernel.response, method: processBeta }
 #    chris_scientist_platform.example:
 #        class: ChrisScientistPlatformBundle\Example
 #        arguments: ["@service_id", "plain_value", %parameter%]
