--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -24,3 +24,9 @@ fos_user_resetting:
 fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /profile
+
+root:
+    path: /
+    defaults:
+        _controller: FrameworkBundle:Redirect:redirect
+        route: chris_scientist_platform_home
