--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -9,6 +9,8 @@ imports:
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: fr
+    app_webmaster: webmaster name
+    from_email: chris_scientist
 
 framework:
     #esi:             ~
@@ -43,7 +45,7 @@ twig:
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver:   pdo_pgsql
+        driver:   pdo_mysql
         host:     "%database_host%"
         port:     "%database_port%"
         dbname:   "%database_name%"
